--- a/AutomationTools/home/templates/home/login.html
+++ b/AutomationTools/home/templates/home/login.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css"/>
 </head>
 <body onload="page_load()">
     <h2>Login</h2>
