--- a/AutomationTools/home/templates/home/register.html
+++ b/AutomationTools/home/templates/home/register.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Register New User</title>
-
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css"/>
 </head>
 <body onload="page_load()">
     <h2>Register New User</h2>
@@ -12,16 +16,46 @@
         <label for="username">Username: {{username}}</label>
         <input type="hidden" id="username" name="username" value="{{username}}"/><br>
         <label for="email_address">Email Address:</label>
-        <input type="text" id="email_address" name="email_address"/><br>
+        <input type="email" id="email_address" name="email_address" onKeyUp="check_password()"/><br>
         <label for="password">New Password:</label>
-        <input type="password" id="password" name="password"/><br>
+        <input type="password" id="password" name="password" onKeyUp="check_password()"/><br>
         <label for="confirm_password">Confirm New Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password"/><br>
-        <input type="submit" value="Register"/>
+        <input type="password" id="confirm_password" name="confirm_password" onKeyUp="check_password()"/>
+        <span id="password_test">Password must be 8 characters or longer.</span><br>
+        <input type="submit" id="submit" disabled=true value="Register"/>
     </form>
 
 
     <script>
+
+        var email = document.querySelector("#email_address");
+        var password_test = document.querySelector("#password_test");
+        var password = document.querySelector("#password");
+        var confirm_password = document.querySelector("#confirm_password");
+        var submit_button = document.querySelector("#submit");
+
+        function check_password(){
+            if (password.value != confirm_password.value){
+                password_test.innerHTML = "Passwords do not match.";
+                submit_button.disabled = true;
+            }
+            else{
+                if (password.value.length < 8){
+                    password_test.innerHTML = "Password must be 8 characters or longer.";
+                    submit_button.disabled = true;
+                }
+                else{
+                    password_test.innerHTML = "✔";
+                    if (email.value == ""){
+                        submit_button.disabled = true;
+                    }
+                    else{
+                        submit_button.disabled = false;
+                    }
+                }
+            }
+        }
+
         function page_load() {
             if ("{{message}}" != ""){
             alert("{{message}}");
