--- a/AutomationTools/admintools/templates/admintools/device_database.html
+++ b/AutomationTools/admintools/templates/admintools/device_database.html
@@ -29,7 +29,7 @@
             </td>
             <td>{{device.ip_address}}</td>
             <td>
-
+                {{device.device_type}}
             </td>
             <td>
                 {{device.os_version}}
@@ -56,6 +56,8 @@
         <input type="text" id="device_name" name="device_name"/><br>
         <label for="ip_address">IP Address:</label>
         <input type="text" id="ip_address" name="ip_address"/><br>
+        <label for="device_type">Device Type:</label>
+        <input type="" id="device_type" name="device_type"/><br>
         <input type="submit" value="Submit"/>
     </form><br>
 
