--- a/AutomationTools/home/templates/home/setup.html
+++ b/AutomationTools/home/templates/home/setup.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Initial Setup</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css"/>
 </head>
 <body onload="page_load()">
     <h2>Initial Setup</h2>
