--- a/AutomationTools/home/static/css/style.css
+++ b/AutomationTools/home/static/css/style.css
@@ -53,7 +53,6 @@ a{
 #header_bar{
     z-index: 999;
     cursor: pointer;
-
 }
 
 #main_menu{
@@ -64,3 +63,33 @@ a{
     display: block;
 }
 
+form ul{
+    margin: auto;
+    list-style: none;
+    margin: 0;
+    padding: 10px;
+}
+form li{
+    width: 100%;
+    padding: 5px;
+}
+form li label{
+    width: 30%;
+    text-align: right;
+}
+
+form li input{
+    display: inline-block;
+}
+
+form li .submit_button{
+}
+
+form .submit_padding{
+    display:inline-block;
+    width: 30%;
+}
+
+h2{
+    padding: 5px;
+}
