--- a/AutomationTools/tools/templates/tools/locate_host.html
+++ b/AutomationTools/tools/templates/tools/locate_host.html
@@ -10,37 +10,50 @@
 
     <form action="{% url 'tools:locate_host' %}" method="post" id="locate_host_form">
         {% csrf_token %}
-        <label for="mac_address_1">MAC Address:</label>
-        <input type="text" id="mac_address_1" name="mac_address_1" class="mac_address_input"
-               maxlength="4" size="4" oninput="check_mac()"/>
-        <label for="mac_address_2">.</label>
-        <input type="text" id="mac_address_2" name="mac_address_2" class="mac_address_input"
-               maxlength="4" size="4" oninput="check_mac()"/>
-        <label for="mac_address_3">.</label>
-        <input type="text" id="mac_address_3" name="mac_address_3" class="mac_address_input"
-               maxlength="4" size="4" oninput="check_mac()"/><br>
-
-        <label for="host_switch_ip">Start search from:</label>
-        <input type="hidden" id="host_switch_ip" name="host_switch_ip" value=""/>
-        <select id="host_switch_select" onchange="set_host_switch()">
-            {% for device in device_list %}
-                    <option value="{{device.ip_address}}">{{device.device_name}} ({{device.device_type}})</option>
-            {% endfor %}
-        </select>
-
-
-    </form>
-
-
-
-
-
-
+        <ul>
+            <li>
+                <label for="mac_address_1">MAC Address:</label>
+                <input type="text" id="mac_address_1" name="mac_address_1" class="mac_address_input"
+                       maxlength="4" size="4" oninput="check_mac()"/>
+                <input type="text" id="mac_address_2" name="mac_address_2" class="mac_address_input"
+                       maxlength="4" size="4" oninput="check_mac()"/>
+                <input type="text" id="mac_address_3" name="mac_address_3" class="mac_address_input"
+                       maxlength="4" size="4" oninput="check_mac()"/>
+            </li>
+            <li>
+                <label for="host_switch_ip">Start search at:</label>
+                <input type="hidden" id="host_switch_ip" name="host_switch_ip" value="{{device_list.0.ip_address}}"/>
+                <select id="host_switch_select" onchange="set_host_switch()">
+                    {% for device in device_list %}
+                            <option value="{{device.ip_address}}">{{device.device_name}}: {{device.ip_address}}({{device.device_type}})</option>
+                    {% endfor %}
+                </select>
+            </li>
+            <li>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username"/>
+            </li>
+            <li>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password"/><span id="password_monkey" onclick="show_password()">&#128584</span><br>
+            </li>
+            <li>
+                <label for="community_string">Community String:</label>
+                <input type="text" id="community_string" name="community_string" value="{{community_string}}"/><br>
+            </li>
+            <li class="submit_button_li"><span class="submit_padding"></span>
+                <input type="submit" class="submit_button" value="Submit">
+            </li>
+        </ul>
+    </form><br>
 
  <script>
         mac_address_boxes = document.querySelectorAll(".mac_address_input");
         host_switch_ip_box = document.querySelector("#host_switch_ip");
         host_switch_select = document.querySelector("#host_switch_select");
+        password_box = document.querySelector("#password");
+        password_monkey = document.querySelector("#password_monkey");
+        password_monkey.style.cursor = "pointer";
 
         function page_load() {
             if ("{{message}}" != ""){
@@ -56,11 +69,28 @@
                 if (!lastChar.match(/[0-9A-Fa-f]/)){
                     mac_address_box.value = mac_address_box.value.substr(0, mac_address_box.value.length - 1);
                 }
+                if (mac_address_box.value.length == 4 && i != 2){
+                    mac_address_boxes[i+1].focus();
+                }
+                else{
+                    return;
+                }
             }
         }
 
         function set_host_switch(){
             host_switch_ip_box.value = host_switch_select.value;
+        }
+
+        function show_password(){
+            if (password_box.type == "password"){
+                password_box.type = "text";
+                password_monkey.innerHTML = "&#128053";
+            }
+            else{
+                password_box.type = "password";
+                password_monkey.innerHTML = "&#128584";
+            }
         }
 </script>
 
