--- a/AutomationTools/admintools/templates/admintools/device_database.html
+++ b/AutomationTools/admintools/templates/admintools/device_database.html
@@ -17,14 +17,14 @@
     {% for device in device_list %}
         <tr class="row">
             <td>&nbsp;
-                <input type="checkbox" align="center" id="{{device.ip_address}}_box" class="check_box"
+                <input type="checkbox" align="center" id="{{device.ip_address}}_box" class="check_box submit_button"
                        name="{{device.ip_address}}_box">&nbsp;
             </td>
             <td>
                 <label for="{{device.ip_address}}_name_box" id="{{device.ip_address}}_name_box">{{device.device_name}}
                     </label>
                 <input type="hidden" size="12" id="{{device.ip_address}}_input_box"
-                       name="{{device.ip_address}}_name_box" onKeyUp="submit_if_enter()"/>
+                       name="{{device.ip_address}}_name_box"/>
 
             </td>
             <td>{{device.ip_address}}</td>
@@ -35,31 +35,44 @@
                 {{device.os_version}}
             </td>
             <td>
-                <input type="button" class=".edit_button" name="{{device.ip_address}}" id="{{device.device_name}}"
+                <input type="button" class="edit_button" name="{{device.ip_address}}" id="{{device.device_name}}"
                        value="&nbsp;&nbsp;&nbsp;Edit&nbsp;&nbsp;" />
             </td>
         </tr>
     {% endfor %}
     </table>
-
-    <input type="submit" name="action" onclick="return confirm('Are you sure?')"
-        id="delete_devices_button" class="invisible" value="Delete Devices"/>
+    <span id="delete_devices_button" class="invisible">
+        <input type="submit" name="action" onclick="return confirm('Are you sure?')"
+            id="delete_devices_b" class="submit_button" value="Delete Devices"/>
+    </span>
 
     </form><br>
 
-    <button id="add_device_button">Add Device</button><br>
+    <button id="add_device_button" class="submit_button">Add Device</button><br>
 
         <form action="{% url 'admintools:device_database' %}" method="post" id="add_device_form" class="invisible">
         {% csrf_token %}
-            <label><b>Add User</b></label><br>
-        <label for="device_name">Device Name:</label>
-        <input type="text" id="device_name" name="device_name"/><br>
-        <label for="ip_address">IP Address:</label>
-        <input type="text" id="ip_address" name="ip_address"/><br>
-        <label for="device_type">Device Type:</label>
-        <input type="" id="device_type" name="device_type"/><br>
-        <input type="submit" value="Submit"/>
-    </form><br>
+            <ul>
+                <li>
+                    <h4><label><b>Add Device</b></label></h4>
+                </li>
+                <li>
+                    <label for="device_name">Device Name:</label>
+                    <input type="text" id="device_name" name="device_name"/>
+                </li>
+                <li>
+                    <label for="ip_address">IP Address:</label>
+                    <input type="text" id="ip_address" name="ip_address"/>
+                </li>
+                <li>
+                    <label for="device_type">Device Type:</label>
+                    <input type="" id="device_type" name="device_type"/>
+                </li>
+                <li class="submit_button_li"><span class="submit_padding"></span>
+                    <input type="submit" class="submit_button" value="Submit"/>
+                </li>
+            </ul>
+    </form>
 
     <script>
         add_device_form = document.querySelector("#add_device_form");
@@ -80,7 +93,7 @@
             }, false);
         }
 
-        edit_buttons = document.querySelectorAll("input[class='.edit_button']");
+        edit_buttons = document.querySelectorAll("input[class='edit_button']");
 
         for(i = 0; i < edit_buttons.length; ++i){
 
