--- a/AutomationTools/tools/templates/tools/locate_host.html
+++ b/AutomationTools/tools/templates/tools/locate_host.html
@@ -14,9 +14,9 @@
             <li>
                 <label for="mac_address_1">MAC Address:</label>
                 <input type="text" id="mac_address_1" name="mac_address_1" class="mac_address_input"
-                       maxlength="4" size="4" oninput="check_mac()"/>
+                       maxlength="4" size="4" oninput="check_mac()"/>.
                 <input type="text" id="mac_address_2" name="mac_address_2" class="mac_address_input"
-                       maxlength="4" size="4" oninput="check_mac()"/>
+                       maxlength="4" size="4" oninput="check_mac()"/>.
                 <input type="text" id="mac_address_3" name="mac_address_3" class="mac_address_input"
                        maxlength="4" size="4" oninput="check_mac()"/>
             </li>
