--- a/AutomationTools/home/templates/home/register.html
+++ b/AutomationTools/home/templates/home/register.html
@@ -14,15 +14,37 @@
     <form action="{% url 'home:register' %}" method="post">
         {% csrf_token %}
         <label for="username">Username: {{username}}</label>
-        <input type="hidden" id="username" name="username" value="{{username}}"/><br>
-        <label for="email_address">Email Address:</label>
-        <input type="email" id="email_address" name="email_address" onKeyUp="check_password()"/><br>
-        <label for="password">New Password:</label>
-        <input type="password" id="password" name="password" onKeyUp="check_password()"/><br>
-        <label for="confirm_password">Confirm New Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password" onKeyUp="check_password()"/>
-        <span id="password_test">Password must be 8 characters or longer.</span><br>
-        <input type="submit" id="submit" disabled=true value="Register"/>
+        <input type="hidden" id="username" name="username" value="{{username}}"/>
+
+        <ul>
+            <li>
+                <label for="username">Username: {{username}}</label>
+                <input type="hidden" id="username" name="username" value="{{username}}"/>
+            </li>
+            <li>
+                <label for="email_address">Email Address:</label>
+                <input type="email" id="email_address" name="email_address" onKeyUp="check_values()"/>
+            </li>
+            <li>
+                <label for="password">New Password:</label>
+                <input type="password" id="password" name="password" onKeyUp="check_values()"/>
+            </li>
+            <li>
+                <label for="confirm_password">Confirm New Password:</label>
+                <input type="password" id="confirm_password" name="confirm_password" onKeyUp="check_values()"/>
+            </li>
+            <li><span class="submit_padding"></span>
+                <span id="password_test">Password must be 8 characters or longer.</span>
+            </li>
+            <li>
+                <label for="community_string">Community String (optional):</label>
+                <input type="text" id="community_string" name="community_string"/>
+            </li>
+
+            <li class="submit_button_li"><span class="submit_padding"></span>
+                <input type="submit" class="submit_button" id="submit" disabled=true value="Register"/>
+            </li>
+        </ul>
     </form>
 
 
