--- a/AutomationTools/home/templates/home/user_options.html
+++ b/AutomationTools/home/templates/home/user_options.html
@@ -8,21 +8,35 @@
 {% include "home/Header.html" %}
 
 
-    <button id="change_password_button">Change Password</button><br>
+    <button id="change_password_button" class="submit_button">Change Password</button><br>
 
         <form action="{% url 'home:user_options' %}" method="post" id="change_password_form">
         {% csrf_token %}
-            <label><b>Change Password</b></label><br>
-        <input type="hidden" id="user_name" name="user_name" value="{{request.user.username}}"/>
-        <label for="old_password">Old Password:</label>
-        <input type="password" id="old_password" name="old_password"/><br>
-        <label for="new_password">New Password:</label>
-        <input type="password" id="new_password" name="new_password" onKeyUp="check_password()"/><br>
-        <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password" onKeyUp="check_password()"/>
-        <span id="password_test">Password must be 8 characters or longer.</span><br>
-        <input type="submit" value="Submit" disabled=true id="change_password_submit_button"/>
-    </form><br>
+            <ul>
+                <li>
+                    <label><h4><b>Change Password</b></h4></label>
+                </li>
+                    <input type="hidden" id="user_name" name="user_name" value="{{request.user.username}}"/>
+                <li>
+                    <label for="old_password">Old Password:</label>
+                    <input type="password" id="old_password" name="old_password"/>
+                </li>
+                <li>
+                    <label for="new_password">New Password:</label>
+                    <input type="password" id="new_password" name="new_password" onKeyUp="check_password()"/>
+                </li>
+                <li>
+                    <label for="confirm_password">Confirm Password:</label>
+                    <input type="password" id="confirm_password" name="confirm_password" onKeyUp="check_password()"/>
+                </li>
+                <li class="submit_button_li"><span class="submit_padding"></span>
+                    <span id="password_test">Password must be 8 characters or longer.</span>
+                </li>
+                <li class="submit_button_li"><span class="submit_padding"></span>
+                    <input type="submit" value="Submit" disabled=true class="submit_button" id="change_password_submit_button"/>
+                </li>
+            </ul>
+    </form>
 
 
     <script>
@@ -32,6 +46,7 @@
         new_password = document.querySelector("#new_password");
         confirm_password = document.querySelector("#confirm_password");
         password_test = document.querySelector("#password_test");
+        password_test.style.fontSize = "12px";
         change_password_submit_button = document.querySelector("#change_password_submit_button");
 
         change_password_button.addEventListener("click", function(){
